name:                rho
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/esmolanka/rho#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka
maintainer:          esmolanka@gmail.com
copyright:           Eugene Smolanka
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  exposed-modules:
    Context
    Eval
    Errors
    Pretty
    Sugared
    TypeChecker
    Types
    Expr

  build-depends:
    base >= 4.7 && < 5, wl-pprint-text, containers, mtl, transformers-compat, text,
    recursion-schemes, free, sexp-grammar

  default-language:    Haskell2010


executable rho
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:
    rho, base >= 4.7 && < 5, mtl, bytestring, text,
    wl-pprint-text, sexp-grammar
